<?xml version="1.0"?>
<package format="3">
  <name>stereo_depth_estimation</name>
  <version>0.1.0</version>
  <description>Stereo depth estimation</description>
  <maintainer email="rohankhaire.work@gmail.com">Rohan Khaire</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sgm</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
